@@ -1,3 +1,8 @@
+2006-12-28  OHASHI Akira  <bg66@koka-in.org>
+
+	* sb-mixi.el (shimbun-mixi-logout-p): Abolish.
+	(shimbun-close): Follow the change above.
+
 2006-12-27  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-post-message-page): New macro.
